--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ php:
  - 7.0
  - 7.1
  - 7.2
+ - 7.3
 
 addons:
   postgresql: "9.5"
@@ -29,6 +30,10 @@ env:
  
 matrix:
  exclude:
+  - env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
+    php: 7.3
+  - env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+    php: 7.3
   - env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
     php: 7.2
   - env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
