--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,11 @@ matrix:
       - MOODLE_BRANCH=master
       - DB=mysqli
 
+    - php: 7.3
+      env:
+      - MOODLE_BRANCH=MOODLE_38_STABLE
+      - DB=pgsql
+
     - php: 7.2
       env:
       - MOODLE_BRANCH=MOODLE_37_STABLE
