--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-dist: focal
+dist: bionic
 
 sudo: required
 
@@ -9,7 +9,8 @@ services:
 
 addons:
   firefox: "47.0.1"
-  postgresql: "11"
+  postgresql: "9.6"
+  chrome: "stable"
   apt:
     packages:
     - openjdk-8-jre-headless
@@ -27,12 +28,12 @@ matrix:
       - MOODLE_BRANCH=master
       - DB=mysqli
 
-    - php: 7.4
+    - php: 7.3
       env:
       - MOODLE_BRANCH=MOODLE_38_STABLE
       - DB=pgsql
 
-    - php: 7.4
+    - php: 7.2
       env:
       - MOODLE_BRANCH=MOODLE_37_STABLE
       - DB=pgsql
