--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,11 @@ matrix:
 
     - php: 7.4
       env:
+      - MOODLE_BRANCH=MOODLE_311_STABLE
+      - DB=pgsql
+      
+    - php: 7.4
+      env:
       - MOODLE_BRANCH=MOODLE_310_STABLE
       - DB=pgsql
 
@@ -62,6 +67,7 @@ before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 14.1
   - nvm use 14.1
+  - npm install -g grunt-cli
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
