--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -4,11 +4,11 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     services:
       postgres:
-        image: postgres:10.3
+        image: postgres:12.7
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -16,7 +16,7 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
       mariadb:
-        image: mariadb:10
+        image: mariadb:10.5
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -28,13 +28,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - php: '7.4'
+          - php: '8.0'
             moodle-branch: 'master'
             database: 'pgsql'
-          - php: '7.4'
+          - php: '8.0'
             moodle-branch: 'master'
             database: 'mariadb'
-          - php: '7.4'
+          - php: '8.0'
             moodle-branch: 'MOODLE_311_STABLE'
             database: 'pgsql'
           - php: '7.4'
@@ -49,9 +49,9 @@ jobs:
           - php: '7.2'
             moodle-branch: 'MOODLE_37_STABLE'
             database: 'pgsql'
-          - php: '7.1'
+          - php: '7.0'
             moodle-branch: 'MOODLE_35_STABLE'
-            database: 'pgsql'
+            database: 'mariadb'
 
     steps:
       - name: Check out repository code
@@ -63,6 +63,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
+          ini-values: max_input_vars=6000
           coverage: none
 
       - name: Initialise moodle-plugin-ci
