--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -35,6 +35,12 @@ jobs:
             moodle-branch: 'master'
             database: 'mariadb'
           - php: '8.0'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: 'pgsql'
+          - php: '8.0'
+            moodle-branch: 'MOODLE_400_STABLE'
+            database: 'mariadb'
+          - php: '8.0'
             moodle-branch: 'MOODLE_311_STABLE'
             database: 'pgsql'
           - php: '7.4'
