--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
 
     services:
       postgres:
@@ -28,14 +28,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - php: '8.0'
+          - php: '8.3'
             moodle-branch: 'master'
             database: 'pgsql'
-          - php: '8.1'
+          - php: '8.2'
             moodle-branch: 'master'
             database: 'mariadb'
+          - php: '8.2'
+            moodle-branch: 'MOODLE_404_STABLE'
+            database: 'mariadb'
           - php: '8.1'
-            moodle-branch: 'MOODLE_403_STABLE'
+            moodle-branch: 'MOODLE_404_STABLE'
             database: 'pgsql'
           - php: '8.1'
             moodle-branch: 'MOODLE_403_STABLE'
