--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -29,10 +29,10 @@ jobs:
       matrix:
         include:
           - php: '8.3'
-            moodle-branch: 'master'
+            moodle-branch: 'main'
             database: 'pgsql'
           - php: '8.2'
-            moodle-branch: 'master'
+            moodle-branch: 'main'
             database: 'mariadb'
           - php: '8.2'
             moodle-branch: 'MOODLE_404_STABLE'
@@ -49,28 +49,7 @@ jobs:
           - php: '8.0'
             moodle-branch: 'MOODLE_401_STABLE'
             database: 'pgsql'
-          - php: '8.0'
-            moodle-branch: 'MOODLE_400_STABLE'
-            database: 'mariadb'
-          - php: '8.0'
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: 'pgsql'
-          - php: '7.4'
-            moodle-branch: 'MOODLE_310_STABLE'
-            database: 'pgsql'
-          - php: '7.4'
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: 'pgsql'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_38_STABLE'
-            database: 'pgsql'
-          - php: '7.2'
-            moodle-branch: 'MOODLE_37_STABLE'
-            database: 'pgsql'
-          - php: '7.0'
-            moodle-branch: 'MOODLE_35_STABLE'
-            database: 'mariadb'
-
+            
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
