--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -34,8 +34,11 @@ jobs:
           - php: '8.2'
             moodle-branch: 'main'
             database: 'mariadb'
-          - php: '8.2'
+          - php: '8.3'
             moodle-branch: 'MOODLE_404_STABLE'
+            database: 'mariadb'
+          - php: '8.2'
+            moodle-branch: 'MOODLE_405_STABLE'
             database: 'mariadb'
           - php: '8.1'
             moodle-branch: 'MOODLE_404_STABLE'
